Able to kill properly now, able to host properly now (excluding some minor things), and probably some other fixes.