@@ -7,7 +7,9 @@ import java.io.FileWriter;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.text.SimpleDateFormat;
+import java.util.ArrayList;
 import java.util.Calendar;
+import java.util.ListIterator;
 
 /**
  * This class is specifically for running the server only and notifying the 
@@ -18,7 +20,7 @@ public class ServerProcess extends Thread {
 	/**
 	 * This contains the strings that will run in the process builder
 	 */
-	private String serverRunCommand;
+	private String serverRunCommands;
 	
 	/**
 	 * A reference to the server
@@ -26,9 +28,20 @@ public class ServerProcess extends Thread {
 	private Server server;
 	
 	/**
-	 * This can be invoked by a method externally to kill the thread
+	 * The process of the server
 	 */
-	private boolean terminateThread = false;
+	private Process proc;
+	
+	/**
+	 * The basic log writer to be used by bufferedLogWriter
+	 */
+	FileWriter logWriter;
+	
+	/**
+	 * Holds the buffered log writer to entering text into the log
+	 */
+	BufferedWriter bufferedLogWriter;
+	
 	
 	/**
 	 * This should be called before starting run
@@ -36,7 +49,7 @@ public class ServerProcess extends Thread {
 	 */
 	public ServerProcess(Server serverReference) {
 		this.server = serverReference;
-		this.serverRunCommand = processServerRunCommand();
+		this.serverRunCommands = processServerRunCommand();
 	}
 	
 	/** 
@@ -44,14 +57,14 @@ public class ServerProcess extends Thread {
 	 * @return True if it was initialized properly, false if something went wrong
 	 */
 	private boolean isInitialized() {
-		return this.server != null && this.serverRunCommand != null;
+		return this.server != null && this.serverRunCommands != null;
 	}
 	
 	/** 
 	 * This method can be invoked to signal the thread to kill itself and the process
 	 */
-	public void terminateThread() {
-		terminateThread = true;
+	public void terminateServer() {
+		proc.destroy();
 	}
 	
 	/**
@@ -63,69 +76,66 @@ public class ServerProcess extends Thread {
 		if (server == null)
 			return null;
 		
-		String runCommand = server.bot.cfg_data.bot_executable;
-		
-		runCommand += " -port " + Integer.toString(server.bot.cfg_data.bot_min_port); // Always start on the minimum port and let zandronum handle the rest
+		// Create an arraylist with all our strings
+		ArrayList<String> runCommand = new ArrayList<>();
+		runCommand.add(server.bot.cfg_data.bot_executable); // This must always be first
+		runCommand.add("-port " + Integer.toString(server.bot.cfg_data.bot_min_port)); // Always start on the minimum port and let zandronum handle the rest
 		
 		if (server.iwad != null)
-			runCommand += " -iwad " + server.bot.cfg_data.bot_directory_path + "iwads/" + server.iwad;
-		// If we have either wads or skulltag_data, then prepare files
-		if (server.wads != null || !server.disable_skulltag_data) {
-			runCommand += " -file ";
-			
-			if (!server.disable_skulltag_data)
-				runCommand += "skulltag_data.pk3 skulltag_actors.pk3";
-			
-			if (server.wads != null && !server.disable_skulltag_data)
-				runCommand += " " + server.wads; // If we added skulltag data from before, then start with a space
-			else if (server.wads != null)
-				runCommand += server.wads; // Otherwise if we didn't add st data before, there is already a space so don't add one
-		}
+			runCommand.add("-iwad iwads/" + server.iwad);
+		
+		if (!server.disable_skulltag_data)
+			runCommand.add("-file skulltag_data.pk3 skulltag_actors.pk3");
+		
+		if (server.wads != null)
+			runCommand.add("-file \"server.wads\"");
 		
 		if (server.config != null)
-			runCommand += " +exec \"" + server.config + "\"";
+			runCommand.add("+exec \"" + server.config + "\"");
 		
 		if (server.gamemode != null)
-			runCommand += " +" + server.gamemode + " 1";
+			runCommand.add("+" + server.gamemode + " 1");
 		
 		if (server.dmflags > 0)
-			runCommand += " +dmflags " + server.dmflags;
+			runCommand.add("+dmflags " + Integer.toString(server.dmflags));
 		
 		if (server.dmflags2 > 0)
-			runCommand += " +dmflags2 " + server.dmflags2;
+			runCommand.add("+dmflags2 " + Integer.toString(server.dmflags2));
 		
 		if (server.dmflags3 > 0)
-			runCommand += " +dmflags3 " + server.dmflags3;
+			runCommand.add("+dmflags3 " + Integer.toString(server.dmflags3));
 		
 		if (server.compatflags > 0)
-			runCommand += " +compatflags " + server.compatflags;
+			runCommand.add("+compatflags " + Integer.toString(server.compatflags));
 		
 		if (server.compatflags2 > 0)
-			runCommand += " +compatflags2 " + server.compatflags2;
+			runCommand.add("+compatflags2 " + Integer.toString(server.compatflags2));
 		
 		if (server.instagib)
-			runCommand += " +instagib 1";
+			runCommand.add("+instagib 1");
 		
 		if (server.buckshot)
-			runCommand += " +buckshot 1";
+			runCommand.add("+buckshot 1");
 		
 		if (server.hostname != null)
-			runCommand += " +sv_hostname \"" + server.sv_hostname + "\"";
+			runCommand.add("+sv_hostname \"" + server.sv_hostname + "\"");
 		
 		// These must be added; could be extended by config; these are hardcoded for now
-		runCommand += " +sv_rconpassword " + server.server_id;
-		
-		/*
+		runCommand.add("+sv_rconpassword " + server.server_id);
 		//runCommand += " +sv_banfile banlist/" + server.server_id + ".txt";
 		//runCommand += " +sv_adminlistfile adminlist/" + server.server_id + ".txt";
 		//runCommand += " +sv_banexemptionfile whitelist/" + server.server_id + ".txt";
-		*/
 		
-		/*
-			+addmap map from mapwad goes here
-		 */
+		//+addmap map from mapwad goes here
 		
-		return runCommand;
+		String execCommand = "";
+		ListIterator<String> it = runCommand.listIterator();
+		while (it.hasNext())
+			if (it.nextIndex() != 0)
+				execCommand += " " + it.next();
+			else
+				execCommand += it.next();
+		return execCommand;
 	}
 	
 	@Override
@@ -138,58 +148,60 @@ public class ServerProcess extends Thread {
 		
 		// Attempt to start up the server
 		String portNumber = ""; // This will hold the port number
-		FileWriter fstream = null;
-		BufferedWriter file = null;
-		Calendar currentDate;
-		File logFile;
+		File logFile = null;
 		long start = System.nanoTime();
 		String strLine = null;
 		SimpleDateFormat formatter = new SimpleDateFormat("yyyy/MMM/dd HH:mm:ss");
 		String dateNow = "";
+		Calendar currentDate;
 		try {
 			// Set up the server
-			ProcessBuilder pb = new ProcessBuilder(serverRunCommand.split(" ")); // Need to split it to get it to work
-			pb.redirectErrorStream(true);
-			Process proc = pb.start();
+			System.out.println("Running process: " + serverRunCommands);
+			proc = Runtime.getRuntime().exec(serverRunCommands);
 			BufferedReader br = new BufferedReader(new InputStreamReader(proc.getInputStream()));
 			
 			// Set up file/IO
 			logFile = new File("/home/auto/skulltag/public_html/logs/" + server.server_id + ".txt");
-			fstream = new FileWriter("/home/auto/skulltag/public_html/logs/" + server.server_id + ".txt");
-			file = new BufferedWriter(fstream);
+			logWriter = new FileWriter("/home/auto/skulltag/public_html/logs/" + server.server_id + ".txt");
+			bufferedLogWriter = new BufferedWriter(logWriter);
 			
 			// Write header in the file
 			if (!logFile.exists())
 				logFile.createNewFile();
-			file.write("_______               __           _______                     \n");
-			file.write("|   __ \\.-----.-----.|  |_        |    ___|.--.--.-----.----.  \n");
-			file.write("|   __ <|  -__|__ --||   _|__     |    ___||  |  |  -__|   _|_ \n");
-			file.write("|______/|_____|_____||____|__|    |_______| \\___/|_____|__||__|\n");
-			file.write("________________________________________________________________________________________________________\n\n");
-			file.flush();
+			bufferedLogWriter.write("_______               __           _______                     \n");
+			bufferedLogWriter.write("|   __ \\.-----.-----.|  |_        |    ___|.--.--.-----.----.  \n");
+			bufferedLogWriter.write("|   __ <|  -__|__ --||   _|__     |    ___||  |  |  -__|   _|_ \n");
+			bufferedLogWriter.write("|______/|_____|_____||____|__|    |_______| \\___/|_____|__||__|\n");
+			bufferedLogWriter.write("________________________________________________________________________________________________________\n\n");
+			bufferedLogWriter.flush();
 			server.bot.sendMessage(server.sender, "Your unique server ID is: " + server.server_id + ". This is your RCON password, which can be used using send_password. You can view your server's logfile at http://www.best-ever.org/logs/" + server.server_id + ".txt");
 			
-			// Handle the output of the server
+			// Process server while it outputs text
 			while ((strLine = br.readLine()) != null) {
 				// Make sure to get the port [Server using alternate port 10666.]
 				if (strLine.startsWith("Server using alternate port ")) {
+					System.out.println(strLine);
 					portNumber = strLine.replace("Server using alternate port ", "").replace(".", "").trim();
-					if (Functions.isNumeric(portNumber))
+					if (Functions.isNumeric(portNumber)) {
 						server.port = Integer.parseInt(portNumber);
-					else
+						server.bot.sendMessage(server.channel, "First port set to: " + server.port);
+					} else
 						server.bot.sendMessage(server.channel, "Warning: port parsing error when setting up server [1]; contact an administrator.");
 					
 				// If the port is used [NETWORK_Construct: Couldn't bind to 10666. Binding to 10667 instead...]
 				} else if (strLine.startsWith("NETWORK_Construct: Couldn't bind to ")) {
+					System.out.println(strLine);
 					portNumber = strLine.replace(new String("NETWORK_Construct: Couldn't bind to " + portNumber + ". Binding to "), "").replace(" instead...", "").trim();
-					if (Functions.isNumeric(portNumber))
+					if (Functions.isNumeric(portNumber)) {
 						server.port = Integer.parseInt(portNumber);
-					else
+						server.bot.sendMessage(server.channel, "Last port set to: " + server.port);
+					} else
 						server.bot.sendMessage(server.channel, "Warning: port parsing error when setting up server [2]; contact an administrator.");
 				}
 				
 				// If we see this, the server started
 				if (strLine.equalsIgnoreCase("UDP Initialized.")) {
+					System.out.println(strLine);
 					server.bot.servers.add(server); // Add the server to the linked list since it's fully operational now
 					server.bot.sendMessage(server.channel, "Server started successfully.");
 					server.bot.sendMessage(server.sender, "To kill your server, type .killmine (this will kill all of your servers), or .kill " + server.port);
@@ -197,11 +209,8 @@ public class ServerProcess extends Thread {
 				
 				currentDate = Calendar.getInstance();
 				dateNow = formatter.format(currentDate.getTime());
-				file.write(dateNow + " " + strLine + "\n");
-				file.flush();
-				
-				if (terminateThread)
-					break;
+				bufferedLogWriter.write(dateNow + " " + strLine + "\n");
+				bufferedLogWriter.flush();
 			}
 			
 			// Handle cleanup
@@ -209,15 +218,7 @@ public class ServerProcess extends Thread {
 			dateNow = formatter.format(currentDate.getTime());
 			long end = System.nanoTime();
 			long uptime = end - start;
-			file.write(dateNow + " Server stopped! Uptime was " + Functions.calculateTime(uptime / 1000000000));
-			
-			// Close the streams before terminating the process
-			file.close();
-			fstream.close();
-			
-			// If we requested termination, then do so:
-			if (terminateThread)
-				proc.destroy();
+			bufferedLogWriter.write(dateNow + " Server stopped! Uptime was " + Functions.calculateTime(uptime / 1000000000));
 			
 			// Notify the main channel
 			server.bot.sendMessage(server.channel, "Server stopped on port " + server.port +"! Server ran for " + Functions.calculateTime(uptime / 1000000000));
@@ -228,8 +229,12 @@ public class ServerProcess extends Thread {
 			e.printStackTrace();
 		} finally {
 			try {
-				file.close();
-				fstream.close();
+				bufferedLogWriter.close();
+			} catch (IOException e) {
+				e.printStackTrace();
+			}
+			try {
+				logWriter.close();
 			} catch (IOException e) {
 				e.printStackTrace();
 			}
